# port-pal-automator

./: .env.development  .env.production  BUILD_STANDALONE.md  CLAUDE.md  LICENSE  LOCAL_DEVELOPMENT.md  QUICK_BUILD.md  README.md  THIRD_PARTY_NOTICES.md  WEB_DEPLOYMENT.md  at-commands-library.json  buglist.md  buglist.md.backup  index.html  netlify.toml  package-lock.json  package.json  right-click-implementation-summary.md  tailwind.config.ts  vercel.json  vite.config.ts  web.config.js
.claude/: settings.local.json
.github/workflows/: tauri-build.yml
docs/: TestCase-JSON-Format.md  UI-Framework.md
scripts/: build-standalone.js  build-web.js
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: .claude.json
src/components/: AsciiUI.tsx  ExecutionStatus.tsx  StatusFooter.tsx  VariableDisplay.tsx
src/components/serial/: AutoCompleteCommandRow.tsx  BaudRateSelect.tsx  CaseTree.tsx  CommandEditor.tsx  CommandRow.tsx  DataTerminal.tsx  DualChannelConnection.tsx  MODULARIZATION_SUMMARY.md  OneNetTestCase.tsx  RunResultDialog.tsx  ScriptEditor.tsx  SerialConnection.tsx  SettingsPanel.tsx  SubCaseRow.tsx  SubcaseEditor.tsx  TestCaseActions.tsx  TestCaseHeader.tsx  TestCaseManager.tsx  TestCaseManagerModular.tsx  TestCaseManagerOptimized.tsx  TestCaseManagerRefactored.tsx  TestCaseManager_backup.tsx  TestCaseManager_fixed.tsx  TestCaseSwitcher.tsx  UrcPreview.tsx  sampleCases.ts  testCaseNavigationUtils.ts  testCaseRecursiveUtils.ts  testCaseUrcUtils.ts  testCaseUtils.ts  types.ts  workspace.ts
src/components/serial/components/: CaseEditDialogInline.tsx  DialogsContainer.tsx  PerformanceMonitorPanel.tsx  TerminalControls.tsx  TerminalCore.tsx  TestCaseCommandList.tsx  TestCaseDialogs.tsx  TestCaseEditor.tsx  TestCaseExecutor.tsx  TestCaseList.tsx  TestCaseManagerHeader.tsx  TestCaseRenderer.tsx  TestCaseScriptPanel.tsx  TestCaseTree.tsx  TestCaseTreeContainer.tsx  TestCaseTreeView.tsx  VirtualizedTestCaseTree.tsx
src/components/serial/editors/: ExecutionEditor.tsx  SubcaseRefEditor.tsx  UrcEditor.tsx
src/components/serial/hooks/: useCommandOperations.ts  useTestCaseActions.ts  useTestCaseBase.ts  useTestCaseDialogs.ts  useTestCaseDrag.ts  useTestCaseDragDrop.ts  useTestCaseDragIntegration.ts  useTestCaseEditor.ts  useTestCaseExecution.ts  useTestCaseImportExport.ts  useTestCaseManager.ts  useTestCaseManagerState.ts  useTestCaseManagerV2.ts  useTestCaseMisc.ts  useTestCaseOperations.ts  useTestCaseScripts.ts  useTestCaseState.ts  useTestCaseUserInteraction.ts
src/components/serial/logic/: testCaseDragDrop.ts  testCaseEventHandlers.ts  testCaseExecution.ts  testCaseWorkspace.ts
src/components/serial/styles/: common.ts
src/components/serial/types/: FailureHandling.ts  ScriptTypes.ts
src/components/serial/utils/: atCommandAutoComplete.ts  common.tsx  contextMenuUtils.ts  dragDropUtils.ts  eventThrottle.ts  importExportUtils.ts  objectPool.ts  performanceMonitor.ts  renderingUtils.ts  scriptManagementUtils.ts  serialDataUtils.ts  serialLogUtils.ts  testCaseCache.ts  testCaseCoreUtils.ts  testCaseExecutionUtils.ts  testCaseHelpers.ts  testCaseNavigationUtils.ts  testCaseOrderingUtils.ts  testCaseRecursiveUtils.ts  testCaseSelectionUtils.ts  testCaseUrcUtils.ts  testCaseUtils.ts  (+3 more)
src/components/ui/: button.tsx  select.tsx
src/contexts/: SettingsContext.tsx
src/hooks/: useExecutionLogs.ts  useGlobalMessages.ts  useSerialManager.ts  useStatusMessages.ts
src/i18n/: index.ts
src/lib/: eventBus.ts  logger.ts  testCaseUtils.ts
src/lib/serial/: dataBufferManager.ts  serialManager.ts  tauriSerialTransport.ts  transport.ts  webCompatibility.ts  webSerialTransport.ts
src/locales/en-US/: translation.json
src/locales/zh-CN/: translation.json
src/pages/: Index.tsx
test-cases/: default-test-cases.json
(+6 files in other folders)
