[package]
name = "serial-pilot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = { version = "2", optional = true }
tauri-plugin-websocket = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serialport = "4.6"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
# Tauri串口插件 - 关键依赖
tauri-plugin-serial = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
# 控制台特性，用于release版本调试
console = []
# Release优化特性
release-optimizations = []
# 默认特性
default = []

# 生产环境优化
[profile.release]
# 优化级别：z代表最小二进制大小
opt-level = "z"
# 连接时优化
lto = true
# 生成调试符号（用于错误报告）
debug = false
# 移除调试断言
debug-assertions = false
# 移除溢出检查
overflow-checks = false
# 移除panic处理器
panic = "abort"
# 增量编译
incremental = false
# 代码生成单元数
codegen-units = 1

# 开发环境配置
[profile.dev]
# 调试模式优化
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
panic = "unwind"
incremental = true
codegen-units = 256

# 测试环境配置
[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
panic = "unwind"
incremental = true
codegen-units = 256

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon", "handleapi", "processthreadsapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"